[package]
name = "chat-message-spy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.11.16", features = ["json"] }
url = "2.3.1"
http-body-util = "0.1.0-rc.2"
tokio-tungstenite = "0.18.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1.25.0", features = ["full"] }
rayon = "1.7.0"