[package]
name = "chatspy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
fork = "0.1.21"
fnv = "1.0.7"
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
reqwest = { version = "0.11.16", features = ["json"] }
http-body-util = "0.1.0-rc.2"
tokio-tungstenite = "0.18.0"
hyper = { version = "1.0.0-rc.3", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
tokio = { version = "1.25.0", features = ["full"] }
crossbeam = "0.8.2"
rayon = "1.7.0"
futures = "0.3.28"